--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ email: deejay@dofddesign.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hey!
 url: https://CitizenDeeJay.github.io 
-baseurl: "/site" # the subpath of your site, e.g. /blog
-twitter_username: jekyllrb
-github_username:  jekyll
+baseurl: "" # the subpath of your site, e.g. /blog
+twitter_username: citizendeejay
+github_username:  citizendeejay
 
 # Build settings
 theme: minima
