--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: https://CitizenDeeJay.github.io 
 baseurl: "site" # the subpath of your site, e.g. /blog
 twitter_username: citizendeejay
-github_username:  citizendeejay
+github_username:  citizen_deejay
 
 # Build settings
 theme: minima
